--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    This is a pitch matching page
+    <div id="app"></div>
+    <script src="/app.js"></script>
   </body>
 </html>
