--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,18 @@
   <head>
     <title>Pitch Match</title>
     <meta charset="utf-8">
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <script src="/app.js"></script>
     <script>
-      ReactDOM.render(
-        React.createElement(App),
-        document.getElementById('app'),
-      );
+      // ReactDOM.render(
+      //   React.createElement(App),
+      //   document.getElementById('app'),
+      // );
     </script>
   </body>
 </html>
